fix(apps): make calendar labels more legible
Makes the calendar event labels white in the dark theme and the FG
color in the light theme.

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -10,7 +10,15 @@ list.tweak-categories separator {
   // make the sidebar look like a normal sidebar
   background: transparent;
 }
-  
+
+/******************
+ * GNOME Calendar *
+ ******************/
+.color-light.horizontal > stack > grid > label,
+.color-dark.horizontal > stack > grid > label {
+  color: if($variant=='light', $fg_color, white);
+}
+
 /***********
 * Nautilus *
 ***********/
